# ai_launcher

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  build_release.ps1  build_release_v2.ps1  generate-icons.ps1  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  quality.yml  release.yml  stale.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
docs/: ARCHITECTURE.md  ICON_OVERRIDES.md  PLAN-v21.md  PLAN_v5.1.md  PRD-v12.5.md  PRD-v15.md  PRD-v20.md  PRD-v21.md  PRD_v8.md  PRD_v9.md  RELEASE_v9.0.0_pt-BR.md  RETROSPECTIVE-v5.5.md  SIGNING.md  VISUAL_SYSTEM.md  command-os-v20.md  fonts-attribution.md  icons-attribution.md
docs/archive/: PRD-v12.md
docs/releases/: v16.0.1.md  v20-checklist.md  v20.0.0.md  v21.0.0.md
e2e/: critical-workflows.spec.ts  launcher.spec.ts  tauriStub.ts  visual-baseline.spec.ts
scripts/: audit-release.sh  audit-storage-access.mjs  audit-tauri-capabilities.mjs  capture-v15-screenshots.mjs  gen-cert.ps1  generate-latest-json.sh  report-build-metrics.mjs  sign-build.ps1  smoke-packaged-app.mjs  verify-v21-release-readiness.mjs
src/: App.tsx  CommandPalette.css  CommandPalette.tsx  CostAggregator.css  CostAggregator.tsx  EmptyState.css  EmptyState.illustrations.tsx  EmptyState.tsx  ErrorBoundary.css  ErrorBoundary.tsx  Onboarding.css  Onboarding.tsx  Orchestrator.css  Orchestrator.tsx  Skeleton.css  Skeleton.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  main.rs  secrets.rs  tray.rs  util.rs
src-tauri/src/commands/: cli.rs  config.rs  mcp.rs  mod.rs  runbook.rs  self_update.rs  session.rs  system.rs  tools.rs  updates.rs
src/app/: App.css  App.tsx  main.tsx  onboarding.ts
src/components/: ErrorBoundary.css  ErrorBoundary.tsx
src/domain/: executionMode.test.ts  executionMode.ts  profileMigration.ts  profileStore.test.ts  profileStore.ts  types.ts
src/features/: page.css
src/hooks/: useAccent.test.ts  useAccent.ts  useAppUpdate.ts  useDensity.ts  useDraggable.ts  useSidebarIndicators.ts  useTheme.ts  useUpdates.ts
src/i18n/: README.md  index.ts
src/icons/: index.ts  registry.ts  types.ts
src/layout/: HeaderBar.css  HeaderBar.tsx  HelpModal.css  HelpModal.tsx  StatusBar.css  StatusBar.tsx
src/lib/: appSettings.ts  appearance.ts  auditLog.test.ts  auditLog.ts  clisOverrides.ts  commandPreview.ts  configIO.test.ts  configIO.ts  customClis.ts  customIdes.ts  exportData.test.ts  exportData.ts  iconRegistry.ts  iconUpload.ts  notifications.ts  projectProfile.test.ts  projectProfile.ts  secrets.test.ts  secrets.ts  tauri.ts
src/presets/: PresetIcon.tsx  PresetsBar.tsx  storage.ts  types.ts
src/providers/: AdminPanel.tsx  AppearanceSection.css  AppearanceSection.tsx  CliOverrideModal.css  CliOverrideModal.tsx  CustomCliModal.css  CustomCliModal.tsx  CustomIdeModal.css  CustomIdeModal.tsx  DryRunModal.tsx  ProviderBadge.tsx  ProviderSelector.tsx  QuickSwitchModal.tsx  budget.test.ts  budget.ts  costEstimator.ts  docsLinks.ts  modelCatalog.ts  providers.css  seeds.ts  storage.ts  testConnection.ts  types.ts
src/shared/: KeyCap.module.css  KeyCap.tsx  PromptLine.tsx  Sparkline.tsx  TerminalFrame.tsx  shared.css
src/styles/: fonts.css  motion.css  tokens-dark.css  tokens-light.css  tokens.css
src/tabs/: AdminTab.tsx  (+7 more)
(+204 files in other folders)
