[package]
name = "ai-launcher"
version = "21.0.0"
description = "Desktop launcher for AI coding CLIs (Windows)"
authors = ["Helbert Moura"]
license = "MIT"
repository = "https://github.com/HelbertMoura/ai_launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
regex-lite = "0.1"
open = "5"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
dirs = "5"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
toml_edit = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
